k8s/reservation-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-service
  labels:
    app: reservation-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reservation-service
  template:
    metadata:
      labels:
        app: reservation-service
    spec:
      containers:
      - name: reservation-service
        image: reservation-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: reservation-service
spec:
  selector:
    app: reservation-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5002
  type: ClusterIP
