k8s/salle-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: salle-service
  labels:
    app: salle-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: salle-service
  template:
    metadata:
      labels:
        app: salle-service
    spec:
      containers:
      - name: salle-service
        image: salle-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: salle-service
spec:
  selector:
    app: salle-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
  type: ClusterIP
